package cmh;

public abstract class Listener {
    public abstract void notify(Human human);
}
