package cmh.application;

class checked extends Exception {

    public checked(String s) {
        super(s);
    }
}
