package cmh.application;

public class unchecked extends RuntimeException{

    public unchecked(String s) {
        super(s);
    }
}

